refactor: indents in blocks acc. to rule 3.5 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ button:hover {
 }
 
 @media (max-width:768px) {
-  .content-block { text-align: center;
+  .content-block {
+    text-align: center;
   }
 }
 .centered {
