--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
   font-family: Lato, sans-serif;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
 input,button{
-  outline:none;
+  outline: none;
 }
 button {
   background: none;
@@ -39,7 +39,7 @@ button:hover {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   .content-block {
     text-align: center;
   }
@@ -52,7 +52,7 @@ button:hover {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-wrapper {
   display: flex;
@@ -115,7 +115,7 @@ button:hover {
   width: 226px;
 }
 .list-item >    .task-input {
-  width: 226px
+  width: 226px;
 }
 .delete-img {
   height: 2em;
@@ -128,20 +128,20 @@ button:hover {
 
 /* Completed */
 #completed .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .task-input {
-  display:none
+  display: none;
 }
 
 .edit-mode .task-input {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 .edit-mode label {
-  display:none;
+  display: none;
 }
