--- a/style.css
+++ b/style.css
@@ -8,10 +8,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button {
   outline: none;
 }
 button {
@@ -114,7 +116,7 @@ button:hover {
   font-size: 18px;
   width: 226px;
 }
-.list-item >    .task-input {
+.list-item > .task-input {
   width: 226px;
 }
 .delete-img {
